Remove Sendy add Substack newsletter

--- a/index.html
+++ b/index.html
@@ -101,8 +101,10 @@
 											<li class="active"><a href="#banner">Home</a></li>
 											<li><a href="#about">About</a></li>
 											<li><a href="#research">Research Areas</a></li>
+											<li><a href="#newsletter">Newsletter</a></li>
 											<li><a href="#portfolio">Projects</a></li>
 											<li><a href="#contact">Contact</a></li>
+
 										</ul>
 									</div>
 
@@ -132,67 +134,6 @@
 					<div class="col-md-8 col-md-offset-2 object-non-visible" data-animation-effect="fadeIn">
 						<h1 class="text-center">Welcome to <span>Tesla AI Labs</span></h1>
 						<!-- <p class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos debitis provident nulla illum minus enim praesentium repellendus ullam cupiditate reiciendis optio voluptatem, recusandae nobis quis aperiam, sapiente libero ut at.</p> -->
-						<section class="home-newsletter">
-							<div class="single">
-								<div class="input-group">
-									<span class="input-group-btn">
-										<button class="btn btn-theme" data-toggle="modal"
-											data-target="#subscribe-form">Subscribe</button>
-									</span>
-								</div>
-						</section>
-
-
-						<!-- Modal -->
-						<div class="modal fade" id="subscribe-form" tabindex="-1" role="dialog"
-							aria-labelledby="project-1-label" aria-hidden="true">
-							<div class="modal-dialog modal-lg">
-								<div class="modal-content">
-									<div class="modal-header">
-										<button type="button" class="close" data-dismiss="modal"><span
-												aria-hidden="true">&times;</span><span
-												class="sr-only">Close</span></button>
-										<h4 class="modal-title" style="text-align: center;" id="project-1-label">
-											Subscribe</h4>
-									</div>
-									<div class="modal-body">
-										<form action="https://sendy.dexterlabs.ml/subscribe" method="POST"
-											accept-charset="utf-8">
-											<label for="name">Name</label><br />
-											<input type="text" name="name" id="name" />
-											<br />
-											<label for="email">Email</label><br />
-											<input type="email" name="email" id="email" /><br /><br />
-											<input type="checkbox" name="gdpr" id="gdpr" />
-											<span><strong>Marketing permission</strong>: I give my consent to to be in
-												touch with me via email using the information I have provided in this
-												form for the purpose of news, updates and marketing.</span>
-											<br /><br />
-											<span><strong>What to expect</strong>: If you wish to withdraw your consent
-												and stop hearing from us, simply click the unsubscribe link at the
-												bottom of every email we send or contact us at admin@teslaailabs.ml. We
-												value and respect your personal data and privacy. To view our privacy
-												policy, please visit our website. By submitting this form, you agree
-												that we may process your information in accordance with these
-												terms.</span>
-											<br /><br />
-											<div style="display:none;">
-												<label for="hp">HP</label><br />
-												<input type="text" name="hp" id="hp" />
-											</div>
-											<input type="hidden" name="list" value="HkRwdkRSekWOu5czapXyUQ" />
-											<input type="hidden" name="subform" value="yes" />
-											<input type="submit" name="submit" id="submit" />
-										</form>
-									</div>
-									<div class="modal-footer">
-										<button type="button" class="btn btn-sm btn-default"
-											data-dismiss="modal">Close</button>
-									</div>
-								</div>
-							</div>
-						</div>
-						<!-- Modal end -->
 					</div>
 				</div>
 
@@ -323,6 +264,12 @@
 								</div>
 							</div>
 						</div>
+					</div>
+					<div class="row">
+						<br>
+						<iframe src="https://teslaailabs.substack.com/embed" width="720" height="320"
+							style="border:1px solid #EEE; background:white;display: block;margin: auto;" frameborder="0"
+							scrolling="no"></iframe>
 					</div>
 				</div>
 			</div>
