add  Intro Video

--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@
 	</header>
 	<!-- header end -->
 
+
+
+	<div class="embed-responsive embed-responsive-16by9">
+		<iframe class="embed-responsive-item" width="640" height="320" src="https://www.youtube.com/embed/hXkfgwxLakg?rel=0controls=0modestbranding=1autoplay=1"></iframe>
+	  </div>
+	  
 	<!-- banner start -->
 	<!-- ================ -->
 	<div id="banner" class="banner">
@@ -134,9 +140,13 @@
 		<div class="banner-caption">
 			<div class="container">
 				<div class="row">
+
+				
 					<div class="col-md-8 col-md-offset-2 object-non-visible" data-animation-effect="fadeIn">
 						<h1 class="text-center">Welcome to <span>Tesla AI Labs</span></h1>
 						<!-- <p class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos debitis provident nulla illum minus enim praesentium repellendus ullam cupiditate reiciendis optio voluptatem, recusandae nobis quis aperiam, sapiente libero ut at.</p> -->
+
+						
 					</div>
 				</div>
 
@@ -290,7 +300,7 @@
 				<div class="col-sm-6">
 					<div class="media">
 						<div class="media-body text-right">
-							<h4 class="media-heading">Service 1</h4>
+							<h4 class="media-heading">Adversarial Machine Learning</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure aperiam consequatur quo
 								quis exercitationem reprehenderit dolor vel ducimus, voluptate eaque suscipit iste
 								placeat.</p>
@@ -301,7 +311,7 @@
 					</div>
 					<div class="media">
 						<div class="media-body text-right">
-							<h4 class="media-heading">Service 2</h4>
+							<h4 class="media-heading">Differential Privacy</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure aperiam consequatur quo
 								quis exercitationem reprehenderit dolor vel ducimus, voluptate eaque suscipit iste
 								placeat.</p>
@@ -310,7 +320,7 @@
 							<i class="fa fa-check"></i>
 						</div>
 					</div>
-					<div class="media">
+					<!-- <div class="media">
 						<div class="media-body text-right">
 							<h4 class="media-heading">Service 3</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure aperiam consequatur quo
@@ -331,7 +341,7 @@
 						<div class="media-right">
 							<i class="fa fa-users"></i>
 						</div>
-					</div>
+					</div> -->
 				</div>
 				<div class="space visible-xs"></div>
 				<div class="col-sm-6">
@@ -340,7 +350,7 @@
 							<i class="fa fa-leaf"></i>
 						</div>
 						<div class="media-body">
-							<h4 class="media-heading">Service 5</h4>
+							<h4 class="media-heading">Data Efficient Machine Learning</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure aperiam consequatur quo
 								quis exercitationem reprehenderit dolor vel ducimus, voluptate eaque suscipit iste
 								placeat.</p>
@@ -351,13 +361,13 @@
 							<i class="fa fa-area-chart"></i>
 						</div>
 						<div class="media-body">
-							<h4 class="media-heading">Service 6</h4>
+							<h4 class="media-heading">Federated Learning</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure aperiam consequatur quo
 								quis exercitationem reprehenderit dolor vel ducimus, voluptate eaque suscipit iste
 								placeat.</p>
 						</div>
 					</div>
-					<div class="media">
+					<!-- <div class="media">
 						<div class="media-left">
 							<i class="fa fa-child"></i>
 						</div>
@@ -378,7 +388,7 @@
 								quis exercitationem reprehenderit dolor vel ducimus, voluptate eaque suscipit iste
 								placeat.</p>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
