--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
 
 
 
-	<div class="embed-responsive embed-responsive-16by9">
-		<iframe class="embed-responsive-item" width="640" height="320" src="https://www.youtube.com/embed/hXkfgwxLakg?rel=0controls=0modestbranding=1autoplay=1"></iframe>
+	<div class="embed-responsive embed-responsive-16by9" id="banner">
+		<iframe class="embed-responsive-item" width="640" height="320" src="https://www.youtube.com/embed/hXkfgwxLakg?&rel=0&controls=0&modestbranding=1&autoplay=1&end=10 "></iframe>
 	  </div>
 	  
 	<!-- banner start -->
 	<!-- ================ -->
-	<div id="banner" class="banner">
+	<!-- <div id="banner" class="banner">
 		<div class="banner-image"></div>
 		<div class="banner-caption">
 			<div class="container">
@@ -144,15 +144,12 @@
 				
 					<div class="col-md-8 col-md-offset-2 object-non-visible" data-animation-effect="fadeIn">
 						<h1 class="text-center">Welcome to <span>Tesla AI Labs</span></h1>
-						<!-- <p class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos debitis provident nulla illum minus enim praesentium repellendus ullam cupiditate reiciendis optio voluptatem, recusandae nobis quis aperiam, sapiente libero ut at.</p> -->
-
-						
 					</div>
 				</div>
 
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<!-- banner end -->
 
 
