--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
 
 	<div class="embed-responsive embed-responsive-16by9" id="banner">
-		<iframe class="embed-responsive-item" width="640" height="320" src="https://www.youtube.com/embed/hXkfgwxLakg?&rel=0&controls=0&modestbranding=1&autoplay=1&end=10 "></iframe>
+		<iframe class="embed-responsive-item" width="640" height="320" src="https://www.youtube.com/embed/hXkfgwxLakg?&rel=0&controls=0&modestbranding=1&autoplay=1&end=9 "></iframe>
 	  </div>
 	  
 	<!-- banner start -->
@@ -140,8 +140,6 @@
 		<div class="banner-caption">
 			<div class="container">
 				<div class="row">
-
-				
 					<div class="col-md-8 col-md-offset-2 object-non-visible" data-animation-effect="fadeIn">
 						<h1 class="text-center">Welcome to <span>Tesla AI Labs</span></h1>
 					</div>
@@ -297,7 +295,7 @@
 				<div class="col-sm-6">
 					<div class="media">
 						<div class="media-body text-right">
-							<h4 class="media-heading">Adversarial Machine Learning</h4>
+							<h4 class="media-heading">Service 1</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure aperiam consequatur quo
 								quis exercitationem reprehenderit dolor vel ducimus, voluptate eaque suscipit iste
 								placeat.</p>
@@ -308,7 +306,7 @@
 					</div>
 					<div class="media">
 						<div class="media-body text-right">
-							<h4 class="media-heading">Differential Privacy</h4>
+							<h4 class="media-heading">Service 2</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure aperiam consequatur quo
 								quis exercitationem reprehenderit dolor vel ducimus, voluptate eaque suscipit iste
 								placeat.</p>
@@ -317,7 +315,7 @@
 							<i class="fa fa-check"></i>
 						</div>
 					</div>
-					<!-- <div class="media">
+					<div class="media">
 						<div class="media-body text-right">
 							<h4 class="media-heading">Service 3</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure aperiam consequatur quo
@@ -338,7 +336,7 @@
 						<div class="media-right">
 							<i class="fa fa-users"></i>
 						</div>
-					</div> -->
+					</div>
 				</div>
 				<div class="space visible-xs"></div>
 				<div class="col-sm-6">
@@ -347,7 +345,7 @@
 							<i class="fa fa-leaf"></i>
 						</div>
 						<div class="media-body">
-							<h4 class="media-heading">Data Efficient Machine Learning</h4>
+							<h4 class="media-heading">Service 5</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure aperiam consequatur quo
 								quis exercitationem reprehenderit dolor vel ducimus, voluptate eaque suscipit iste
 								placeat.</p>
@@ -358,13 +356,13 @@
 							<i class="fa fa-area-chart"></i>
 						</div>
 						<div class="media-body">
-							<h4 class="media-heading">Federated Learning</h4>
+							<h4 class="media-heading">Service 6</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure aperiam consequatur quo
 								quis exercitationem reprehenderit dolor vel ducimus, voluptate eaque suscipit iste
 								placeat.</p>
 						</div>
 					</div>
-					<!-- <div class="media">
+					<div class="media">
 						<div class="media-left">
 							<i class="fa fa-child"></i>
 						</div>
@@ -385,7 +383,7 @@
 								quis exercitationem reprehenderit dolor vel ducimus, voluptate eaque suscipit iste
 								placeat.</p>
 						</div>
-					</div> -->
+					</div>
 				</div>
 			</div>
 		</div>
