revert to Simple

--- a/index.html
+++ b/index.html
@@ -128,14 +128,14 @@
 	<!-- header end -->
 
 
-
+<!-- 
 	<div class="embed-responsive embed-responsive-16by9" id="banner">
 		<iframe class="embed-responsive-item" width="640" height="320" src="https://www.youtube.com/embed/hXkfgwxLakg?&rel=0&controls=0&modestbranding=1&autoplay=1&end=9 "></iframe>
 	  </div>
-	  
+	   -->
 	<!-- banner start -->
 	<!-- ================ -->
-	<!-- <div id="banner" class="banner">
+	<div id="banner" class="banner">
 		<div class="banner-image"></div>
 		<div class="banner-caption">
 			<div class="container">
@@ -147,7 +147,7 @@
 
 			</div>
 		</div>
-	</div> -->
+	</div>
 	<!-- banner end -->
 
 
